--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.jboss</groupId>
@@ -8,7 +7,7 @@
    </parent>
    <groupId>org.jboss.forge</groupId>
    <artifactId>forge-maven-plugin</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0.Alpha1</version>
    <packaging>maven-plugin</packaging>
    <name>Forge Maven Plugin</name>
    <url>http://forge.jboss.org</url>
@@ -113,6 +112,7 @@
       <connection>scm:git:git://github.com/forge/forge-maven-plugin.git</connection>
       <developerConnection>scm:git:git@github.com:forge/forge-maven-plugin.git</developerConnection>
       <url>http://github.com/forge/forge-maven-plugin</url>
-   </scm>
+     <tag>1.0.0.Alpha1</tag>
+  </scm>
 
 </project>
